--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Starter Template</title>
+    <link rel="stylesheet" href="dist/styles.css"
 </head>
 
 <body ng-controller="ctrl">
@@ -23,9 +24,8 @@
     </h4>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controller.js"></script>
-    <script src="js/service.js"></script>
+    <script src="dist/js/bundle.js"></script>
+    
 </body>
 
 </html>
