--- a/index.html
+++ b/index.html
@@ -3,30 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Starter Template</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <title>Adventure</title>
+    <link rel="stylesheet" href="./dist/styles.css"/>
 </head>
 
 <body ng-controller="ctrl">
 
-    <h3>These are germs</h3>
+<div class="wrapper">
 
-    <div class="germs">
-        <div ng-repeat="germ in germData">
-            <span class="name">{{germ.Bacteria}}</span> - <span class="drug">{{germ.Penicilin}}</span> - <span class="drug">{{germ.Streptomycin}}</span>            - <span class="drug">{{germ.Neomycin}}</span> - <span class="staining">{{germ.Gram_Staining}}</span> -
-            <span
-                class="genus">{{germ.Genus}}</span>
-        </div>
-    </div>
+  <header class="head">
+  </header>
 
-    <h4>
-        Not all germs are bad, mmkay?
-    </h4>
+  <section class="main">
+    {{torchEncounter}}
+      <ui-view></ui-view>
+
+    <a ui-sref="encounter"><button class="turn">Next Page</button></a>
+
+  </section>
+
+  <footer class ="foot">
+
+  </footer>
+  
+</div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controller.js"></script>
-    <script src="js/service.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
+    <script src="./dist/js/bundle.js"></script>
 </body>
 
 </html>
