--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="head">
   </header>
 
-  <section class="main">
+  <section class="main" style="background-image: url("./assets/grass.png")">
 
       <ui-view></ui-view>
 
